# AllpixDigi

./: AllPixSimulation.md  CMakeLists.txt  README.md
.github/workflows/: compileandtest.yml
allpixconf/: basic.conf  placement.conf
cmake/: clang-cpp-checks.cmake
include/: AllpixDigiProcessor.cc  AllpixDigiProcessor.h
marlin/: clicReconstruction.xml
model/CLIC_o3_v14/: CLIC_o3_v14.xml  Vertex_o2_v06_01.xml  clic_steer.py
scripts/: extractMap.C  loader.C
src/: AllpixDigiProcessor.cc
